Added package-loack.json as it is needed for publishing (#45)
* Added package-loack.json as it is needed for publishing

* Publish

 - @commerce-sdk/core@0.0.3-alpha.0
 - @commerce-sdk/exchange-connector@1.0.2-alpha.0
 - commerce-sdk@0.0.3-alpha.0

* Too many lines

* Updated readmes

* Publish

 - @commerce-sdk/core@0.0.4-alpha.0
 - @commerce-sdk/exchange-connector@1.0.3-alpha.0
 - commerce-sdk@0.0.4-alpha.0

* Updated npm dest

* Publish

 - @commerce-sdk/core@0.0.5-alpha.0
 - @commerce-sdk/exchange-connector@1.0.4-alpha.0
 - commerce-sdk@0.0.5-alpha.0

* Make it public

* Publish

 - @commerce-sdk/core@0.0.6-alpha.0
 - @commerce-sdk/exchange-connector@1.0.4-alpha.0
 - commerce-sdk@0.0.6-alpha.0

* Wrong number of lines

* Publish

 - @commerce-sdk/core@0.0.7-alpha.0
 - @commerce-sdk/exchange-connector@1.0.5-alpha.0
 - commerce-sdk@0.0.7-alpha.0

* Update names

* Publish

 - @commerce-apps/core@0.0.8-alpha.0
 - @commerce-apps/exchange-connector@1.0.6-alpha.0
 - commerce-sdk@0.0.8-alpha.0

* Updated for name. Tomorrow will change back

* Publish

 - @commerce-apps/core@0.0.9-alpha.0
 - @commerce-apps/exchange-connector@1.0.7-alpha.0
 - @commerce-app/commerce-sdk@0.0.9-alpha.0

* comemrce-apps

* Publish

 - @commerce-apps/core@0.0.10-alpha.0
 - @commerce-apps/exchange-connector@1.0.8-alpha.0
 - @commerce-apps/commerce-sdk@0.0.10-alpha.0

* No more YALPs?

* Publish

 - @commerce-apps/core@0.0.11-alpha.0
 - @commerce-apps/exchange-connector@1.0.9-alpha.0
 - @commerce-apps/commerce-sdk@0.0.11-alpha.0

* Need exchange-connector due to mocking service?

* Publish

 - @commerce-apps/commerce-sdk@0.0.12-alpha.0

* Updated to package up needed dependencies

* Publish

 - @commerce-apps/core@0.0.12-alpha.0
 - @commerce-apps/commerce-sdk@0.0.13-alpha.0

* Fixing dependencies

* Publish

 - @commerce-apps/core@0.0.12-alpha.1
 - @commerce-apps/exchange-connector@1.0.9-alpha.1
 - @com

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -1,5 +1,7 @@
-import { StaticClient, BaseClient, ClientConfig, ResponseError, AuthSchemes } from "@commerce-sdk/core";
+
+import { StaticClient, BaseClient, ClientConfig, ResponseError, AuthSchemes } from "@commerce-apps/core";
 import _ from "lodash";
+
 
 import {
 {{#each dataTypes}}
