We now have traits working

--- a/packages/generator/templates/operations.ts.hbs
+++ b/packages/generator/templates/operations.ts.hbs
@@ -13,7 +13,7 @@
           {{/each}}
           headers?: { [key: string]: string }
         }{{#or (is method "patch") (is method "post") (is method "put")}}, body: {{default request.payloads.[0].schema.inherits.[0].linkTarget.name "object"}}{{/or}}
-      ): Promise<{{#if (eq (isReturnPayloadDefined .) true)}}{{getReturnPayloadType .}}{{else}}object{{/if}}> {
+      ): Promise<{{getReturnPayloadType .}}> {
 
         const pathParameters = {
     {{#each ../parameters}}
