--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -17,7 +17,7 @@ export class Client extends BaseClient {
     super(config);
 
     if (!!!config.baseUri) {
-      config.baseUri = "{{servers/0/url}}";
+      config.baseUri = "{{getBaseUri models.[0] }}";
     }
     {{#each models}}
         {{#each declares}}
