--- a/packages/generator/templates/index.ts.hbs
+++ b/packages/generator/templates/index.ts.hbs
@@ -1,5 +1,6 @@
 {{#each apiSpec}}
-export { Client as {{capitalize .}} } from "./{{.}}";
+import * as {{capitalize .}} from "./{{.}}";
+export { {{capitalize .}} };
 {{/each}}
 
 
