Updated handlebar rendering to allow prototype usage

--- a/packages/generator/templates/dto.ts.hbs
+++ b/packages/generator/templates/dto.ts.hbs
@@ -2,10 +2,10 @@
 {{#if (isTypeDefinition .)}}
 export type {{getValue name}} = {
     {{#each (onlyRequired properties)}}
-        {{getValue name}}: {{{getDataType .}}};
+        {{{getValue name}}}: {{{getDataType .}}};
     {{/each}}
     {{#each (onlyOptional properties)}}
-        {{getValue name}}?: {{{getDataType .}}};
+        {{{getValue name}}}?: {{{getDataType .}}};
     {{/each}}
 }
 {{/if}}
