Add baseuri parameters

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -1,5 +1,5 @@
 
-import { StaticClient, BaseClient, ClientConfig, ResponseError, AuthSchemes } from "@commerce-apps/core";
+import { StaticClient, BaseClient, BaseClientConfig, ResponseError, AuthSchemes } from "@commerce-apps/core";
 import _ from "lodash";
 
 import {
@@ -18,6 +18,13 @@ export {
 {{/each}}
 } from "./{{apiSpec}}.types";
 
+type ClientConfig = BaseClientConfig & {
+  baseUriParameters?: {
+    {{#each (getBaseUriParameters models.[0]) }}
+    "{{{this}}}": string;
+    {{/each}}
+  }
+}
 
 export class Client extends BaseClient {
   constructor(config: ClientConfig) {
