--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -31,7 +31,7 @@ export class Client extends BaseClient {
     super(config);
 
     if (!!!config.baseUri) {
-      config.baseUri = "{{getBaseUri models.[0] }}";
+      this.clientConfig.baseUri = "{{getBaseUri models.[0] }}";
     }
     {{#each models}}
         {{#each declares}}
