Br/support baseuri parameters.w 7103152 (#64)
* Add baseuri parameters

* Add helper tests for base uri parameters

* Add base uri params to resource

* lint fix

* Fix baseuri issue

* Add another test

* Tweak resource

* Tweak resource more

* Increase coverage

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -1,5 +1,5 @@
 
-import { StaticClient, BaseClient, ClientConfig, ResponseError, AuthSchemes } from "@commerce-apps/core";
+import { StaticClient, BaseClient, BaseClientConfig, ResponseError, AuthSchemes } from "@commerce-apps/core";
 import _ from "lodash";
 
 import {
@@ -18,13 +18,20 @@ export {
 {{/each}}
 } from "./{{apiSpec}}.types";
 
+type ClientConfig = BaseClientConfig & {
+  baseUriParameters?: {
+    {{#each (getBaseUriParameters models.[0]) }}
+    "{{{this}}}": string;
+    {{/each}}
+  }
+}
 
 export class Client extends BaseClient {
   constructor(config: ClientConfig) {
     super(config);
 
     if (!!!config.baseUri) {
-      config.baseUri = "{{getBaseUri models.[0] }}";
+      this.clientConfig.baseUri = "{{getBaseUri models.[0] }}";
     }
     {{#each models}}
         {{#each declares}}
