code to re-org api and api groups/families

--- a/packages/generator/templates/index.ts.hbs
+++ b/packages/generator/templates/index.ts.hbs
@@ -1,6 +1,6 @@
 {{#each apiSpec}}
 import * as {{capitalize .}} from "./{{.}}";
-export { {{capitalize .}} };
+export default {{capitalize .}};
 {{/each}}
 
 
