Added code to render api group and index templates

--- a/packages/generator/templates/apiGroup.ts.hbs
+++ b/packages/generator/templates/apiGroup.ts.hbs
@@ -1,5 +1,5 @@
 {{#each apiSpec}}
-import * as {{capitalize .}} from "./{{.}}/{{.}}";
+import * as {{capitalize .}} from "./{{.}}";
 export { {{capitalize .}} };
 {{/each}}
 
