Fixed issue with import

--- a/packages/generator/templates/apiIndex.ts.hbs
+++ b/packages/generator/templates/apiIndex.ts.hbs
@@ -1,5 +1,5 @@
 {{#each apiSpec}}
-import * as {{capitalize .}} from "./{{.}}";
+import {{capitalize .}} from "./{{.}}";
 export default {{capitalize .}};
 {{/each}}
 
