Organize API families and its APIs

--- a/packages/generator/templates/index.ts.hbs
+++ b/packages/generator/templates/index.ts.hbs
@@ -1,6 +1,9 @@
 {{#each apiSpec}}
-import * as {{capitalize .}} from "./{{.}}";
-export { {{capitalize .}} };
+import * as {{capitalize .}} from "./{{.}}/{{.}}";
 {{/each}}
-
+export {
+{{#each apiSpec}}
+    {{capitalize .}}{{#unless @last}},{{/unless}}
+{{/each}}
+}
 
