Addressed review comments

--- a/packages/generator/templates/apiFamily.ts.hbs
+++ b/packages/generator/templates/apiFamily.ts.hbs
@@ -1,5 +1,5 @@
 {{#each apiNamesInFamily}}
-import {{capitalize .}} from "./{{.}}";
+import * as {{capitalize .}} from "./{{.}}/{{.}}";
 {{/each}}
 export {
 {{#each apiNamesInFamily}}
