--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -26,6 +26,15 @@ type ClientConfig = BaseClientConfig & {
   }
 }
 
+/**
+* Instantiate a Client object with desired ClientConfig to perform operations 
+* available in this API client.
+* 
+* Note: When performing operations that require ShopperJWT authentication, an
+* Authorization header containing a JWT can be added to the headers field of the 
+* ClientConfig object. The Client will use that Authorization header for all the 
+* operations it is used to perform.
+*/
 export class Client extends BaseClient {
   constructor(config: ClientConfig) {
     super(config);
