Organize API families and its APIs (#70)
* Organize API families and its APIs

* Addressed review comments

* deleted unused apiIndex template

* unit tests for render templates

* unit tests for parser function

--- a/packages/generator/templates/apiFamily.ts.hbs
+++ b/packages/generator/templates/apiFamily.ts.hbs
@@ -1,9 +1,8 @@
-{{#each apiSpec}}
+{{#each apiNamesInFamily}}
 import * as {{capitalize .}} from "./{{.}}/{{.}}";
 {{/each}}
 export {
-{{#each apiSpec}}
+{{#each apiNamesInFamily}}
     {{capitalize .}}{{#unless @last}},{{/unless}}
 {{/each}}
 }
-
