Updated to skip integration tests, added new tsdoc

--- a/packages/generator/templates/operations.ts.hbs
+++ b/packages/generator/templates/operations.ts.hbs
@@ -32,7 +32,7 @@
       // @ts-ignore
       return StaticClient.{{method}}({
         client: this,
-        rawResponse: options.rawResponse,
+        rawResponse: (options || {}).rawResponse,
         path: "{{../path}}",
         pathParameters: pathParameters,
         queryParameters: queryParameters,
