--- a/packages/generator/templates/helpers.ts.hbs
+++ b/packages/generator/templates/helpers.ts.hbs
@@ -5,6 +5,17 @@ import  * as sdk from "./"
 
 const shopperAuthApi = sdk.{{shopperAuthClient}}.Client.prototype.{{shopperAuthApi}};
 
+/**
+ * @description This wraps the parameters for the authCall to retrieve a token. 
+ *  That call can be called directly, this is here just for convenience
+ * @export
+ * @template T A template used to extend the parameters of the shopper authentication call
+ * @param {(T extends (arg: infer A) => any
+ *           ? { parameters: { clientId?: string; shortCode?: string } } & A
+ *           : never)} options This provides the type ahead for this parameter properly
+ * **NOTE** clientId might need to be changed once the new apis are deployed that use clientId as a parameters
+ * @returns {Promise<ShopperToken>}
+ */
 export async function getAuthToken<T extends typeof shopperAuthApi>(
         options: T extends (arg: infer A) => any
           ? { parameters: { clientId?: string; shortCode?: string } } & A
