--- a/packages/generator/templates/helpers.ts.hbs
+++ b/packages/generator/templates/helpers.ts.hbs
@@ -23,7 +23,7 @@ export async function getAuthToken<T extends typeof shopperAuthApi>(
       ): Promise<ShopperToken> {
 
         let client = new sdk.{{shopperAuthClient}}.Client({    
-                baseUriParameters: {
+                parameters: {
                         shortCode: options.parameters.shortCode
                 }
         });
