Adding additional params properties to site.raml

--- a/packages/generator/templates/dto_partial.ts.hbs
+++ b/packages/generator/templates/dto_partial.ts.hbs
@@ -1,4 +1,6 @@
-{{> additionalPropertiesPartial properties=typeDto.properties }} {
+{{#each (onlyAdditional typeDto.properties)}}
+    { [key: string]: {{{getDataType .}}} } &
+{{/each}} {
     {{#each (onlyRequired typeDto.properties)}}
         {{{getValue name}}}: {{{getDataType .}}};
     {{/each}}
