Check for additional properties before rendering

--- a/packages/generator/templates/dto_partial.ts.hbs
+++ b/packages/generator/templates/dto_partial.ts.hbs
@@ -1,6 +1,8 @@
-{{#each (onlyAdditional typeDto.properties)}}
-    { [key: string]: {{{getDataType .}}} } &
-{{/each}} {
+{{#if (isAdditionalPropertiesAllowed typeDto)}}
+    {{#each (onlyAdditional typeDto.properties)}}
+        { [key: string]: {{{getDataType .}}} } &
+    {{/each}}
+{{/if}} {
     {{#each (onlyRequired typeDto.properties)}}
         {{{getValue name}}}: {{{getDataType .}}};
     {{/each}}
