--- a/packages/generator/templates/dto_partial.ts.hbs
+++ b/packages/generator/templates/dto_partial.ts.hbs
@@ -1,12 +1,12 @@
 {{#if (isAdditionalPropertiesAllowed typeDto)}}
     {{#each (onlyAdditional typeDto.properties)}}
-        { [key: string]: {{{getDataType .}}} } &
+        { [key: string]: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}} } &
     {{/each}}
 {{/if}} {
     {{#each (onlyRequired typeDto.properties)}}
-        {{{getValue name}}}: {{{getDataType .}}};
+        {{{getValue name}}}: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}};
     {{/each}}
     {{#each (onlyOptional typeDto.properties)}}
-        {{{getValue name}}}?: {{{getDataType .}}};
+        {{{getValue name}}}?: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}};
     {{/each}}
 }
