--- a/packages/generator/templates/operations.ts.hbs
+++ b/packages/generator/templates/operations.ts.hbs
@@ -34,11 +34,12 @@
       const queryParameters = _.omit(parameters, _.keys(pathParameters));
 
       {{#each request.queryParameters}}
-      {{! for queryParameters that are common query parameters, fallback to client config for undefined }}
-      {{#if (isCommonQueryParameter name)}}
-      queryParameters["{{{name}}}"] !== undefined 
-          ? queryParameters["{{{name}}}"] : this.clientConfig.parameters["{{{name}}}"];
-      {{/if}}
+        {{! for queryParameters that are common query parameters, fallback to client config for undefined }}
+        {{#if (isCommonQueryParameter name)}}
+        queryParameters["{{{name}}}"] =
+          queryParameters["{{{name}}}"] !== undefined 
+            ? parameters["{{{name}}}"] : this.clientConfig.parameters["{{{name}}}"];
+        {{/if}}
       {{/each}}
 
       // @ts-ignore
