--- a/packages/generator/templates/dto_partial.ts.hbs
+++ b/packages/generator/templates/dto_partial.ts.hbs
@@ -3,6 +3,8 @@
         {{#each (onlyAdditional typeDto.properties)}}
             { [key: string]: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}} } &
         {{/each}}
+    {{else}}
+        { [key: string]: any } &
     {{/if}}
 {{/if}} {
     {{#each (onlyRequired typeDto.properties)}}
