--- a/packages/generator/templates/dto_partial.ts.hbs
+++ b/packages/generator/templates/dto_partial.ts.hbs
@@ -1,16 +1,18 @@
-{{#if (isAdditionalPropertiesAllowed typeDto)}}
-    {{#if (onlyAdditional typeDto.properties)}}
-        {{#each (onlyAdditional typeDto.properties)}}
-            { [key: string]: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}} } &
-        {{/each}}
-    {{else}}
-        { [key: string]: any } &
-    {{/if}}
-{{/if}} {
-    {{#each (onlyRequired typeDto.properties)}}
-        {{{getValue name}}}: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}};
-    {{/each}}
-    {{#each (onlyOptional typeDto.properties)}}
-        {{{getValue name}}}?: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}};
-    {{/each}}
+{
+{{#each (getAllProperties typeDto)}}
+{{#if (isRequired .)}}
+    {{{getValue name}}}: {{{getDataType .}}};
+{{else if (isOptional .)}}
+    {{{getValue name}}}?: {{{getDataType .}}};
+{{/if}}
+{{/each}}
 }
+{{~#if (isAdditionalPropertiesAllowed typeDto)}}
+{{#if (onlyAdditional typeDto)}}
+{{#each (onlyAdditional typeDto)}} &
+{ [key: string]: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}} }
+{{/each}}
+{{else}} &
+{ [key: string]: any }
+{{/if}}
+{{/if}}
