--- a/packages/generator/templates/dto_partial.ts.hbs
+++ b/packages/generator/templates/dto_partial.ts.hbs
@@ -1,18 +1,18 @@
 {
 {{#each (getAllProperties typeDto)}}
 {{#if (isRequired .)}}
-    {{{getValue name}}}: {{{getDataType .}}};
+    {{{getValue name}}}: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}};
 {{else if (isOptional .)}}
-    {{{getValue name}}}?: {{{getDataType .}}};
+    {{{getValue name}}}?: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}};
 {{/if}}
 {{/each}}
 }
 {{~#if (isAdditionalPropertiesAllowed typeDto)}}
 {{#if (onlyAdditional typeDto)}}
-{{#each (onlyAdditional typeDto)}} &
-{ [key: string]: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}} }
+{{#each (onlyAdditional typeDto)}}
+ & { [key: string]: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}} }
 {{/each}}
-{{else}} &
-{ [key: string]: any }
+{{else}}
+ & { [key: string]: any }
 {{/if}}
 {{/if}}
