--- a/packages/generator/templates/dtoPartial.ts.hbs
+++ b/packages/generator/templates/dtoPartial.ts.hbs
@@ -1,16 +1,18 @@
-{{#if (isAdditionalPropertiesAllowed typeDto)}}
-    {{#if (onlyAdditional typeDto.properties)}}
-        {{#each (onlyAdditional typeDto.properties)}}
-            { [key: string]: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}} } &
-        {{/each}}
-    {{else}}
-        { [key: string]: any } &
-    {{/if}}
-{{/if}} {
-    {{#each (onlyRequired typeDto.properties)}}
-        {{{getValue name}}}: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}};
-    {{/each}}
-    {{#each (onlyOptional typeDto.properties)}}
-        {{{getValue name}}}?: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}};
-    {{/each}}
+{
+{{#each (getProperties typeDto)}}
+{{#if (isRequiredProperty .)}}
+    {{{getValue name}}}: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}};
+{{else if (isOptionalProperty .)}}
+    {{{getValue name}}}?: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}};
+{{/if}}
+{{/each}}
 }
+{{~#if (isAdditionalPropertiesAllowed typeDto)}}
+{{#if (getAdditionalProperties typeDto)}}
+{{#each (getAdditionalProperties typeDto)}}
+ & { [key: string]: {{#or (eq (getDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getDataType .}}}{{/or}} }
+{{/each}}
+{{else}}
+ & { [key: string]: any }
+{{/if}}
+{{/if}}
