Fixed markdown for versions, linked changelog in readme

--- a/packages/generator/templates/version.md.hbs
+++ b/packages/generator/templates/version.md.hbs
@@ -5,10 +5,10 @@
 {{#each .}}
 #### [{{{./name}}}](https://anypoint.mulesoft.com/exchange/{{{./id}}})
 {{#if ./version}}
-**Mule App Version** {{{./version}}}
+**Mule App Version** {{{./version}}}<br />
 {{/if}}
 {{#if ./description}}
-*{{{./description}}}*
+*{{{./description}}}*<br />
 {{/if}}
 
 {{/each}}
