Remove unnecessary arrays used for API model while rendering the templates

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -32,14 +32,12 @@ export class Client extends BaseClient {
     super(config);
 
     if (!!!config.baseUri) {
-      this.clientConfig.baseUri = "{{getBaseUri models.[0] }}";
+      this.clientConfig.baseUri = "{{getBaseUri apiModel}}";
     }
 
   }
 
-{{#each models}}
-    {{> operationsPartial model=. }}
-{{/each}}
+  {{> operationsPartial model=apiModel }}
 
 }
 
