Refactor to allow exporting of types and class togetehr without having to use Client

--- a/packages/generator/templates/apiFamily.ts.hbs
+++ b/packages/generator/templates/apiFamily.ts.hbs
@@ -1,8 +1,9 @@
 {{#each apiNamesInFamily}}
-import * as {{capitalize .}} from "./{{.}}/{{.}}";
+import {{capitalize .}} from "./{{.}}/{{.}}";
 {{/each}}
 export {
 {{#each apiNamesInFamily}}
     {{capitalize .}}{{#unless @last}},{{/unless}}
 {{/each}}
 }
+
