--- a/packages/generator/templates/dto.ts.hbs
+++ b/packages/generator/templates/dto.ts.hbs
@@ -1,5 +1,5 @@
 {{#each .}}
     {{#if (isTypeDefinition .)}}
-export type {{getValue name}} = {{> dtoPartial typeDto=. }}
+export type {{getValue name}}T = {{> dtoPartial typeDto=. }}
     {{/if}}
 {{/each}}
