--- a/packages/generator/templates/helpers.ts.hbs
+++ b/packages/generator/templates/helpers.ts.hbs
@@ -3,7 +3,7 @@ import { ShopperToken, stripBearer, ResponseError } from "@commerce-apps/core"
 import  * as sdk from "./"
 
 //type of the input parameter of auth function
-type authFuncParamType = Parameters<typeof sdk.{{shopperAuthClient}}.Client.prototype.{{shopperAuthApi}}>[0];
+type authFuncParamType = Parameters<typeof sdk.{{shopperAuthClient}}.prototype.{{shopperAuthApi}}>[0];
 
 /**
  * @description This wraps the parameters for the authorization call to retrieve a token.
@@ -26,7 +26,7 @@ export async function getShopperToken (
     clientConfig: sdk.ClientConfig,
     body: authFuncParamType["body"]
 ): Promise<ShopperToken>{
-    let client = new sdk.{{shopperAuthClient}}.Client(clientConfig);
+    let client = new sdk.{{shopperAuthClient}}(clientConfig);
 
     let response = (await client.{{shopperAuthApi}}({
         rawResponse: true,
@@ -38,7 +38,7 @@ export async function getShopperToken (
     return new ShopperToken(stripBearer(response.headers.get("Authorization")));
 }
 
-const shopperAuthApi = sdk.{{shopperAuthClient}}.Client.prototype.{{shopperAuthApi}};
+type shopperAuthApi = typeof sdk.{{shopperAuthClient}}.prototype.{{shopperAuthApi}};
 
 /**
 * @deprecated Use the "getShopperToken" function instead
@@ -51,13 +51,13 @@ const shopperAuthApi = sdk.{{shopperAuthClient}}.Client.prototype.{{shopperAuthA
 *           : never)} options This provides the type ahead for this parameter properly
 * @returns {Promise<ShopperToken>}
 */
-export async function getAuthToken<T extends typeof shopperAuthApi>(
+export async function getAuthToken<T extends shopperAuthApi>(
     options: T extends (arg: infer A) => any
     ? { parameters: { clientId?: string; shortCode?: string } } & A
     : never
     ): Promise<ShopperToken> {
 
-    let client = new sdk.{{shopperAuthClient}}.Client({
+    let client = new sdk.{{shopperAuthClient}}({
     parameters: {
     shortCode: options.parameters.shortCode
     }
