Minor update to template tsdoc

--- a/packages/generator/templates/operations.ts.hbs
+++ b/packages/generator/templates/operations.ts.hbs
@@ -26,7 +26,7 @@
     /**
     * {{description}}
     *
-    * @returns A promise of type Response if rawResponse is true, a promise of {{getReturnPayloadType .}} otherwise
+    * @returns A promise of type Response if rawResponse is true, a promise of type {{getReturnPayloadType .}} otherwise
     */
     {{name}}<T extends boolean>(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
