--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -1,5 +1,5 @@
 
-import { StaticClient, BaseClient, ClientConfig, ResponseError } from "@commerce-apps/core";
+import { StaticClient, BaseClient, ClientConfig, Response, ResponseError } from "@commerce-apps/core";
 import _ from "lodash";
 
 import {
