--- a/packages/generator/templates/apiclients.md.hbs
+++ b/packages/generator/templates/apiclients.md.hbs
@@ -1,17 +1,19 @@
-# Included Apis
-Each of the following APIs has a corresponding client in the SDK which can be instantiated to communicate with that API. See the [README](./README.md#usage) for examples on how to instantiate, configure and use clients.
+# Included APIs
 
+Each of the following APIs has a corresponding client in the SDK which can be instantiated to communicate with that API. See the [README](./README.md#usage) for examples on how to instantiate, configure and use clients.
 {{#eachInMap apis}}
+
 ## {{{key}}}
 {{#each value}}
-#### [{{{name}}}](https://developer.commercecloud.com/s/api-details/{{{getObjectIdByAssetId assetId}}})
+
+### [{{{name}}}](https://developer.commercecloud.com/s/api-details/{{{getObjectIdByAssetId assetId}}})
 {{#if version}}
-**Mule App Version** {{{version}}}<br />
+
+**Mule App Version:** {{{version}}}
 {{/if}}
 {{#if description}}
-*{{{description}}}*<br />
+
+*{{{description}}}*
 {{/if}}
 {{/each}}
-_______________________________________________________________________
-
 {{/eachInMap}}
