exported the logger and changed the README.md

--- a/packages/generator/templates/index.ts.hbs
+++ b/packages/generator/templates/index.ts.hbs
@@ -13,4 +13,4 @@ export {
     helpers
 }
 
-export { ClientConfig, CommonParameters, COMMERCE_SDK_LOGGER_KEY } from "@commerce-apps/core"
+export { ClientConfig, CommonParameters, sdkLogger } from "@commerce-apps/core"
