Updated readme, templates and tests for retrySettings

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -1,6 +1,7 @@
 
 import { StaticClient, BaseClient, ClientConfig, Response, ResponseError } from "@commerce-apps/core";
 import _ from "lodash";
+import { OperationOptions } from "retry";
 
 import {
 {{#each dataTypes}}
