--- a/packages/generator/templates/operations.ts.hbs
+++ b/packages/generator/templates/operations.ts.hbs
@@ -97,7 +97,7 @@
         path: "{{../path}}",
         pathParameters: pathParameters,
         queryParameters: queryParameters,
-        retrySettings: retrySettings,
+        retrySettings: (options || {}).retrySettings,
         headers: (options || {}).headers{{#or (is method "patch") (is method "post") (is method "put")}}, 
         body: (options || {}).body{{/or}}
       });
