--- a/packages/generator/templates/operations.ts.hbs
+++ b/packages/generator/templates/operations.ts.hbs
@@ -74,6 +74,26 @@
       rawResponse?: T
     ): Promise<T extends true ? Response : {{getReturnPayloadType .}}>;
 
+    /**
+    * {{{ formatForTsDoc description }}}
+    *
+    * @param options - An object containing the options for this method.
+    * @param parameters - An object containing the parameters for this method.
+    {{#each ../parameters }}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
+    {{/each}}
+    {{#each request/queryParameters}}
+    * @param {{{name}}} - {{#if (getValue description)}}{{{getValue description}}}{{/if}}
+    {{/each}}
+    * @param headers - An object literal of key value pairs of the headers to be
+    * sent with this request.
+    {{#or (is method "patch") (is method "post") (is method "put")}}
+    * @param body - The data to send as the request body.
+    {{/or}}
+    * @param rawResponse - Set to true to return entire Response object instead of DTO.
+    *
+    * @returns A promise of type Response if rawResponse is true, a promise of type {{getReturnPayloadType .}} otherwise.
+    */
     {{name}}(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
         parameters?: {
